# text

./: .gitignore  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.py  syncrepo.py
benchmark/: benchmark_basic_english_normalize.py  benchmark_bert_tokenizer.py  benchmark_experimental_vectors.py  benchmark_pytext_vocab.py  benchmark_roberta_model.py  benchmark_roberta_pipeline.py  benchmark_sentencepiece.py  benchmark_torcharrow_ops.py  benchmark_vocab.py  data_construction.py  mha_block.py
docs/source/: conf.py
examples/data_pipeline/: roberta_dataframe.py  roberta_datapipe.py
examples/text_classification/: predict.py  train.py
examples/torcharrow/: roberta_sst2_training_with_torcharrow.py
examples/tutorials/: sst2_classification_non_distributed.py  t5_demo.py
examples/vocab/: fairseq_vocab.py
test/integration_tests/: test_generate.py  test_roberta_models.py  test_t5_models.py
test/smoke_tests/: smoke_tests.py
test/torchtext_unittest/: test_build.py  test_functional.py  test_transforms.py  test_utils.py  test_vocab.py
tools/setup_helpers/: extension.py
torchtext/: _extension.py  utils.py
torchtext/csrc/: CMakeLists.txt  bert_tokenizer.cpp  clip_tokenizer.cpp  gpt2_bpe_tokenizer.cpp  gpt2_bpe_tokenizer.h  register_pybindings.cpp  register_torchbindings.cpp
torchtext/vocab/: vectors.py
torchtext2/: __init__.py  _extension.py  functional.py  transforms.py  utils.py  version.py
torchtext2/csrc/: CMakeLists.txt  bert_tokenizer.cpp  bert_tokenizer.h  clip_tokenizer.cpp  clip_tokenizer.h  common.cpp  common.h  export.h  (+16 more)
(+104 files in other folders)
